--- a/index.html
+++ b/index.html
@@ -1,68 +1,112 @@
 <!DOCTYPE html>
 <html lang="en-CA">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    >
-    <title>Robert McKenney | Demos</title>
 
-    <!-- Bootstrap CSS -->
-    <link
-      rel="stylesheet"
-      href="css/min/main.css"
-    >
-  </head>
-  <body>
-    <article class="container">
-      <div class="row">
-        <div class="col col-sm-7">
-          <h1 class="header-subtle">Profile</h1>
-          <h2 class="display-4">Robert L. McKenney</h2>
-          <p class="text-secondary">
-            Professor, Interactive Media Design<br>
-            School of Media and Design<br>
-            Algonquin College
-          </p>
-        </div>
-        <div class="col-4 col-sm-5  col-xl-4">
-          <img
-            src="img/rlm-headshot.png"
-            alt="Robert McKenney smiling"
-            class="img-fluid rounded-circle mb-3"
-          >
-        </div>
-      </div>
-      <p class="lead mt-3">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-      </p>
-      <p>
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id.
-      </p>
-      <button
-        type="button"
-        class="btn btn-primary float-right"
-      >Call to action!</button>
-    </article>
+<head>
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="shortcut icon" href="./img/eric.png">
+	<title>Khoa Le | Portfolio</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" href="css/min/main.css">
+	<!-- Others -->
+	<link rel="stylesheet" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300, 400, 700" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="js/script.js" defer></script>
+</head>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous">
-    </script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
-      integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
-      crossorigin="anonymous">
-    </script>
-    <script
-      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-      integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
-      crossorigin="anonymous">
-    </script>
-  </body>
+<body>
+	<header>
+		<!-- Introduction -->
+		<button class="hamburger">&#9776;</button>
+		<button class="cross">&#735;</button>
+		
+	<div class="menu1">
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#ux">UX/UI Design</a></li>
+				<li><a href="#photo">Photography</a></li>
+				<li><a href="#video">Videography</a></li>
+			</ul>
+	</div>
+	<div class="menu">
+		<ul>
+			<li><a href="#about">About</a></li>
+			<li><a href="#ux">UX/UI Design</a></li>
+			<li><a href="#photo">Photography</a></li>
+			<li><a href="#video">Videography</a></li>
+		</ul>
+	</div>
+	<h1>hi i'm khoa le<span>.</span></h1>
+	<div class="bar"></div>
+	<p>Welcome to my <span style="font-weight: 700;">PORTFOLIO</span><span>.</span> These are my proud works, please enjoy<span>.</span></p>
+	</header>
+	<!-- About me -->
+	<div id="about" class="about">
+		<h2>ABOUT ME</h2>
+		<div class="bar"></div>
+		<div class="info clearfix">
+			<!-- information container -->
+			<p>As a <span>UX Designer</span>, I focus on developing products that make the user experience at the center of its process. A good design helps people navigate easily, and it also breaths life into the static images. Hence, I try to keep my designs modern, up to date and elegant.</p> <img src="img/tease.png" alt="tease" width="315px" height="385px"> </div>
+	</div>
+	<!-- UX/UI Design -->
+	<div class="ux" id="ux">
+		<div class="wrap clearfix">
+			<div class="wrap1">
+				<h2>HORIZON UXD</h2>
+				<div class="bar"></div>
+				<p><span style="font-weight: 700;">HORIZON</span> Project is to create a portal for IMD students through UX Design process.</p>
+				<a href="https://drive.google.com/drive/u/1/folders/0B44iD_BG18hlemRRT2daeXVraE0" alt="uxd" target="_blank">
+					<div class="button">
+						<h3>See full project</h3></div>
+				</a>
+			</div>
+			<div class="wrap2"> <img src="img/phone.png" alt="phone" width="358.92px" height="738px"> </div>
+		</div>
+	</div>
+	<!-- Photography -->
+	<div class="photo" id="photo">
+		<h2>PHOTOGRAPHY</h2>
+		<div class="bar"></div>
+		<div class="container" id="container"> <img class="thumb" src="img/thumb1.png"> </div>
+		<div class="overlay" id="overlay">
+			<div class="large" id="large"> <img id="modal" src="img/full1.png"> </div>
+			<div class="close" id="close"><i class="fa fa-times fa-2x" aria-hidden="true"></i></div>
+		</div>
+	</div>
+	</div>
+	<!-- Videography -->
+	<div class="video" id="video">
+		<div class="wrap clearfix">
+			<div class="wrap1">
+				<h2>VIDEOGRAPHY</h2>
+				<div class="bar"></div>
+				<p>These are some of the video projects I have filmed in couple of years.</p>
+				<a href="https://www.youtube.com/channel/UCMkwH4LPBHwmHhsu1iEEqnQ" alt="video" target="_blank">
+					<div class="button">
+						<h3>See my channel</h3></div>
+				</a>
+			</div>
+			<div class="wrap2">
+				<a href="https://www.youtube.com/watch?v=gxA0WdASNYg&t=172s" target="_blank"><img src="img/dear.png" alt="dear"></a>
+				<a href="https://www.youtube.com/watch?v=add14yi2rzc&t=2s" target="_blank"><img src="img/ard.png" alt="ard"></div>
+			</a>
+		</div>
+	</div>
+	<!-- Contact -->
+	<div id="contact" class="contact">
+		<h2>CONTACT ME</h2>
+		<div class="bar"></div>
+		<div class="social"> <a href="https://www.facebook.com/7P.eric" target="_blank"><i class="fa fa-facebook-official fa-4x" aria-hidden="true"></i></a> <a href="https://www.behance.net/khoale0602" target="_blank"><i class="fa fa-behance fa-4x" aria-hidden="true"></i></a> <a href="https://www.instagram.com/_thebluer" target="_blank"><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></a> </div>
+		<p>Thanks for your time. You can <span style="font-weight: 700">keep in touch</span> with me via email.</p>
+		<a onclick="window.location.href='mailto:le000131@algonquinlive.com?'">
+			<div class="button">
+				<h3>Email me</h3></div>
+		</a>
+	</div>
+</body>
+<footer>&copy; 2017 - Khoa Le, UX Desinger</footer>
+
 </html>
